docs: resolve various incorrect/missing info issues in book

--- a/docs/vocs/docs/pages/book/writing-apps/compiling-a-program.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/compiling-a-program.mdx
@@ -53,9 +53,9 @@ OpenVM-specific artifacts will be placed in `${target_dir}/openvm/`, but if `--o
 
   **Description**: Path to the OpenVM config `.toml` file that specifies the VM extensions. By default will search the manifest directory for `openvm.toml`. If no file is found, OpenVM will use a default configuration. Currently the CLI only supports known extensions listed in the [Using Existing Extensions](/book/acceleration-using-extensions/overview) section. To use other extensions, use the [SDK](/book/advanced-usage/sdk).
 
-- `--output_dir <OUTPUT_DIR>`
+- `--output-dir <OUTPUT_DIR>`
 
-  **Description**: Output directory for OpenVM artifacts to be copied to. Keys will be placed in `${output-dir}/`, while all other artifacts will be in `${output-dir}/${profile}`.
+  **Description**: Output directory for OpenVM artifacts to be copied to.
 
 - `--init-file-name <INIT_FILE_NAME>`
 
