--- a/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
@@ -74,8 +74,8 @@ In addition, the command outputs a JSON file `verifier.bytecode.json` of the for
 ```json [verifier.bytecode.json]
 {
     "sol_compiler_version": "0.8.19",
-    "sol_compiler_options": "",
-    "bytecode": "0x..."
+    "sol_compiler_options": "..",
+    "bytecode": ".."
 }
 ```
 
