docs: replace _ with -

--- a/docs/vocs/docs/pages/book/writing-apps/compiling-a-program.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/compiling-a-program.mdx
@@ -117,7 +117,7 @@ The following options enable or disable conditional compilation features defined
 
 ### Output Options
 
-- `--target_dir <TARGET_DIR>`
+- `--target-dir <TARGET_DIR>`
 
   **Description**: Directory for all generated artifacts and intermediate files. Defaults to directory `target/` at the root of the workspace.
 
