--- a/docs/vocs/docs/pages/book/writing-apps/verifying-proofs.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/verifying-proofs.mdx
@@ -70,7 +70,7 @@ The EVM proof is written as a JSON of the following format:
 }
 ```
 
-where each field is a hex string. We explain what each field represents:
+where each field is a hex string (without the `0x` prefix). We explain what each field represents:
 
 - `version`: current OpenVM version
 - `app_exe_commit`: `32` bytes for the commitment of the app executable.
