fix: link heading

--- a/docs/vocs/docs/pages/book/writing-apps/running-a-program.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/running-a-program.mdx
@@ -46,7 +46,7 @@ Many of the options for `cargo openvm run` will be passed to `cargo openvm build
   **Description**: Execution mode. Available options are `pure`, `meter`, and `segment`.
   - **pure**: Runs the program normally
   - **meter**: Runs the program and estimates the execution cost in terms of number of cells
-  - **segment**: Runs the program and calculates the number of segments that the execution will be split into for proving (see [continuations](/specs/architecture/continuations))
+  - **segment**: Runs the program and calculates the number of segments that the execution will be split into for proving (see [Continuations Design](/specs/architecture/continuations#continuations))
 
   **Default**: `pure`
 
