--- a/docs/vocs/docs/pages/book/writing-apps/writing-a-program.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/writing-a-program.mdx
@@ -53,7 +53,7 @@ OpenVM supports standard Rust written using the `std` library, with the followin
 - Standard output and standard error (e.g., `println!, eprintln!`) are supported and will _both_ print to the host standard output.
 - System randomness calls are supported by default. **Important**: system randomness requests randomness from the host, and the provided randomness is unvalidated.
   Users must be aware of this and only use system randomness in settings where this meets their security requirements. In particular, system randomness should **not** be used for cryptographic purposes.
-- Reading of environmental variables will always return `None`.
+- Reading of environment variables will always return `None`.
 - Reading of `argc` and `argv` will always return `0`.
 
 The above applies to the Rust `std` library. Users should also be aware that when writing a standard Rust program, usage of external crates that use foreign function interfaces (FFI) may not work as expected.
@@ -117,14 +117,7 @@ fn main() {
 }
 ```
 
-If you want to feature gate the usage of the standard library, you can add
-
-```toml
-[features]
-std = ["openvm/std"]
-```
-
-to `Cargo.toml` as discussed above. In this case, the `main.rs` header should be modified to:
+In this case, the `main.rs` header should be modified to:
 
 ```rust
 // main.rs
