--- a/docs/vocs/docs/pages/book/writing-apps/writing-a-program.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/writing-a-program.mdx
@@ -117,7 +117,7 @@ fn main() {
 }
 ```
 
-In this case, the `main.rs` header should be modified to:
+The `main.rs` header should be modified to:
 
 ```rust
 // main.rs
