docs: add --input option to default flow description

--- a/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
@@ -13,6 +13,8 @@ cargo openvm setup --evm    # generate proving and verification keys for EVM pro
 cargo openvm prove evm      # generate the EVM proof
 ```
 
+Note that if your program take inputs, you will have to specify them using the `--input` option.
+
 ## Application Key Generation
 
 The `keygen` command generates both an application proving and verification key.
