docs: PR comments

--- a/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
@@ -13,7 +13,7 @@ cargo openvm setup --evm    # generate proving and verification keys for EVM pro
 cargo openvm prove evm      # generate the EVM proof
 ```
 
-Note that if your program take inputs, you will have to specify them using the `--input` option.
+Note that if your program takes inputs, you will have to pass them to the `cargo openvm prove` command using the `--input` option.
 
 ## Application Key Generation
 
