--- a/docs/vocs/docs/pages/book/advanced-usage/sdk.mdx
+++ b/docs/vocs/docs/pages/book/advanced-usage/sdk.mdx
@@ -70,7 +70,7 @@ A custom OpenVM configuration can also be specified in an `openvm.toml` file and
 ```
 
 <details>
-<summary>To to customize your `Sdk`, you may need additional dependencies. Click here to view.</summary>
+<summary>To customize your `Sdk`, you may need additional dependencies. Click here to view.</summary>
 
 ```rust
 use openvm_sdk::{
