chore: use :::info

--- a/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
+++ b/docs/vocs/docs/pages/book/writing-apps/generating-proofs.mdx
@@ -121,7 +121,9 @@ Note that `cargo openvm setup --evm` downloads auxiliary files for halo2 KZG par
 If the `$HOME` environment variable is not set, this command may fail. This command requires a large amount of compute and memory (~70 GB) and can take ~7mins on a `m6a.16xlarge` instance.
 :::
 
+:::info
 Users who wish to download pre-generated files instead of running `cargo openvm setup --evm` locally may download them using the following script:
+:::
 
 <details>
 <summary> Click here to view the download script</summary>
